--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 bytes = "1.1"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["std"] }
 clap = "3.1"
 confy = "0.4"
 cron = "0.12"
@@ -23,3 +23,4 @@ serde_json = "1.0"
 sonor = "2"
 tokio = { version = "1.17", features = ["full"] }
 url = "2.4"
+openssl = { version = "0.10", features = ["vendored"] }
