--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,9 @@ log = "0.4"
 pnet = "0.29"
 quick-xml = { version = "0.27", features = ["async-tokio", "serialize"] }
 rand = "0.8"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sonor = "2"
 tokio = { version = "1.17", features = ["full"] }
 url = "2.4"
-openssl = { version = "0.10", features = ["vendored"] }
