--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ serde_json = "1.0"
 sonor = "2"
 tokio = { version = "1.17", features = ["full"] }
 url = "2.4"
+openssl = { version = "0.10", features = ["vendored"] }
